# context-reliability-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
docs/: benchmark_lifecycle.md  cli_walkthrough.md  index.md  quickstart.md  tutorial.md
docs/assets/: architecture.md
examples/: basic_benchmark.py  generate_reports.py  langchain_integration.py  leaderboard_example.py  llamaindex_integration.py  retriever_benchmark.py
fixtures/: manifest.json  sample.json
fixtures/v1/: contradiction.json  distractor.json  large_dataset.json  noise_resistance.json  temporal_relevance.json
scripts/: generate_large_fixture.py  smoke_test_wheel.py  validate_release.py
src/context_reliability_bench/: __init__.py  __main__.py  batch.py  cache.py  comparison_engine.py  discovery.py  history.py  leaderboard_export.py  loader.py  parallel.py  quality_gates.py  regression.py  reproducibility.py  runner.py  scoring.py  stats.py  suite.py  timing.py  trend.py  validate_cli.py  validation.py  version_check.py
src/context_reliability_bench/categories/: __init__.py  base.py  contradiction.py  distractor.py  noise_resistance.py  registry.py  temporal_relevance.py
src/context_reliability_bench/config/: __init__.py  model.py  profiles.py  yaml_config.py
src/context_reliability_bench/metrics/: __init__.py  mrr.py  ndcg.py  precision_at_k.py  protocol.py  recall_at_k.py  top_k_accuracy.py
src/context_reliability_bench/models/: __init__.py  benchmark_case.py  benchmark_metadata.py  document.py  leaderboard.py  manifest.py  metric_result.py  query.py  retrieved_context.py  run_result.py  versioned_dataset.py
src/context_reliability_bench/reports/: __init__.py  comparison_export.py  csv_export.py  dashboard_export.py  html_export.py  json_export.py  markdown_export.py
src/context_reliability_bench/retrieval/: __init__.py  bm25.py  harness.py  in_memory.py  protocol.py  vector.py
tests/: test_batch_execution.py  test_benchmark_config.py  test_benchmark_metadata.py  test_cache.py  test_cli.py  test_comparison_engine.py  test_comparison_export.py  test_contradiction.py  test_coverage_gate.py  test_dashboard_export.py  test_discovery.py  test_distractor.py  test_execution_profiles.py  test_html_export.py  test_large_dataset.py  test_leaderboard.py  test_leaderboard_export.py  test_loader.py  test_manifest.py  test_markdown_export.py  test_metrics.py  test_models.py  test_noise_resistance.py  test_parallel_execution.py  test_performance.py  test_quality_gates.py  test_regression_detection.py  test_release_validation.py  test_reports.py  test_reproducibility.py  test_retrieval.py  test_run_history.py  test_runner.py  test_scoring.py  test_stats.py  test_suite.py  test_temporal_relevance.py  test_trend_analysis.py  test_validate_cli.py  test_version_check.py  (+3 more)
