[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "context-reliability-bench"
version = "0.1.0"
description = "A benchmark for evaluating context reliability in language models"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
